changing name and docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   simple-proxy:
     build:
       context: /tmp/empty
-      dockerfile: ./pl-client-proxy.dockerfile   # change if you named it differently
+      dockerfile: ./Dockerfile.pk-proxy-image   # change if you named it differently
     container_name: pk-proxy-image
     ports:
       - "3000:3222"
