--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PK-PROXY-PORT=3222
-CWD = ""
+DOCKER-IMAGE-DIRECTORY = "/home/purethunder/scalestruct"
+MINECRAFT-DATA-DIRECTORY = "/home/purethunder/minecraft-data"
