--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PK-PROXY-PORT=3222
-DOCKER-IMAGE-DIRECTORY = "/home/purethunder/scalestruct"
-MINECRAFT-DATA-DIRECTORY = "/home/purethunder/minecraft-data"
+PK_PROXY_PORT=3222
+DOCKER_IMAGE_DIRECTORY = "/home/purethunder/scalestruct"
+MINECRAFT_DATA_DIRECTORY = "/home/purethunder/minecraft-data"
