--- a/Dockerfile.bombsquad-server
+++ b/Dockerfile.bombsquad-server
@@ -11,10 +11,9 @@ ENV TARGETARCH=${TARGETARCH}
 ARG BOMBSQUAD_VERSION="${BOMBSQUAD_VERSION}"
 
 # Install required packages and clean up
-RUN apk update -y && \
-    apk curl && \
-    apk clean all && \
-    rm -rf /var/cache/apk /tmp/*
+RUN apk update && \
+    apk add --no-cache curl && \
+    rm -rf /var/cache/apk/*
 
 WORKDIR /app
 
