--- a/Dockerfile.bombsquad-server
+++ b/Dockerfile.bombsquad-server
@@ -27,6 +27,7 @@ RUN case "${TARGETARCH}" in \
     tar -xvf bombsquad.tar.gz && \
     mv BombSquad_Server*/ bombsquad-server && \
     rm -f bombsquad.tar.gz && \
+    chmod +x /app/bombsquad-server/bombsquad_headless /app/bombsquad-server/bombsquad_server && \
     sed -i 's/#party_name = "FFA"/party_name = "Junglee Server"/' /app/bombsquad-server/config.toml && \
     sed -i 's/#party_is_public = true/party_is_public = true/' /app/bombsquad-server/config.toml && \
     sed -i 's/#max_party_size = 6/max_party_size = 21/' /app/bombsquad-server/config.toml
