--- a/Dockerfile.bombsquad-server
+++ b/Dockerfile.bombsquad-server
@@ -12,7 +12,7 @@ ARG BOMBSQUAD_VERSION="${BOMBSQUAD_VERSION}"
 
 # Install required packages and clean up
 RUN apt update && \
-    apt add curl coreutils && \
+    apt install -y curl coreutils && \
     rm -rf /var/cache/apt/* /tmp/*
 
 WORKDIR /app
