bombsquad docker compose fix

--- a/Dockerfile.bombsquad-server
+++ b/Dockerfile.bombsquad-server
@@ -5,7 +5,8 @@
 #
 FROM python:3.13-slim-trixie
 
-ARG TARGETARCH
+ARG TARGETARCH="x86_64"
+ARG BOMBSQUAD_VERSION="1.7.43"
 ENV TARGETARCH=${TARGETARCH}
 
 ARG BOMBSQUAD_VERSION="${BOMBSQUAD_VERSION}"
