adding permission grp in render image

--- a/render_tailscale_installer/Dockerfile.tailscale-render-deployment
+++ b/render_tailscale_installer/Dockerfile.tailscale-render-deployment
@@ -23,6 +23,7 @@ RUN echo "+search +short" > /root/.digrc
 COPY run-tailscale.sh /render/
 
 COPY install-tailscale.sh /tmp
-RUN /tmp/install-tailscale.sh && rm -r /tmp/*
+RUN chmod +x /tmp/install-tailscale.sh && /tmp/install-tailscale.sh && rm -r /tmp/*
 
+RUN chmod +x ./run-tailscale.sh
 CMD ./run-tailscale.sh
