tailscale nginx setup try

--- a/render_tailscale_installer/Dockerfile.tailscale-render-deployment
+++ b/render_tailscale_installer/Dockerfile.tailscale-render-deployment
@@ -1,29 +1,27 @@
-FROM debian:latest
-WORKDIR /render
+# Base image
+FROM debian:bullseye-slim
 
-ARG TAILSCALE_VERSION
-ENV TAILSCALE_VERSION=$TAILSCALE_VERSION
-
-RUN apt-get -qq update \
-  && apt-get -qq install --upgrade -y --no-install-recommends \
-    apt-transport-https \
+# Install dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    gnupg \
     ca-certificates \
-    netcat-openbsd \
-    wget \
-    dnsutils \
-  > /dev/null \
-  && apt-get -qq clean \
-  && rm -rf \
-    /var/lib/apt/lists/* \
-    /tmp/* \
-    /var/tmp/* \
-  && :
+    nginx \
+    iproute2 \
+    iputils-ping \
+    sudo \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN echo "+search +short" > /root/.digrc
-COPY run-tailscale.sh /render/
+# Install Tailscale
+RUN curl -fsSL https://tailscale.com/install.sh | sh
 
-COPY install-tailscale.sh /tmp
-RUN chmod +x /tmp/install-tailscale.sh && /tmp/install-tailscale.sh && rm -r /tmp/*
+# Copy nginx config and entrypoint
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
-RUN chmod +x ./run-tailscale.sh
-CMD ./run-tailscale.sh
+# Expose HTTP (Render handles HTTPS automatically)
+EXPOSE 80
+
+# Start container
+CMD ["/entrypoint.sh"]
