--- a/render_tailscale_installer/Dockerfile.tailscale-render-deployment
+++ b/render_tailscale_installer/Dockerfile.tailscale-render-deployment
@@ -1,4 +1,3 @@
-# Base image
 FROM debian:bullseye-slim
 
 # Install dependencies
@@ -9,19 +8,19 @@ RUN apt-get update && apt-get install -y \
     nginx \
     iproute2 \
     iputils-ping \
+    privoxy \
     sudo \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Tailscale
 RUN curl -fsSL https://tailscale.com/install.sh | sh
 
-# Copy nginx config and entrypoint
+# Copy configs and entrypoint
 COPY nginx.conf /etc/nginx/nginx.conf
+COPY privoxy.config /etc/privoxy/config
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
-# Expose HTTP (Render handles HTTPS automatically)
 EXPOSE 80
 
-# Start container
 CMD ["/entrypoint.sh"]
