--- a/render_tailscale_installer/privoxy.config
+++ b/render_tailscale_installer/privoxy.config
@@ -1,2 +1,4 @@
-listen-address  127.0.0.1:8118
+listen-address 127.0.0.1:8118
+
+# forward all HTTP requests into tailscale’s SOCKS5
 forward-socks5t / 127.0.0.1:1055 .
