--- a/render_tailscale_installer/Dockerfile.tailscale-render-deployment
+++ b/render_tailscale_installer/Dockerfile.tailscale-render-deployment
@@ -5,19 +5,16 @@ RUN apt-get update && apt-get install -y \
     curl \
     gnupg \
     ca-certificates \
-    nginx \
     iproute2 \
     iputils-ping \
-    privoxy \
-    sudo \
+    haproxy \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Tailscale
 RUN curl -fsSL https://tailscale.com/install.sh | sh
 
-# Copy configs and entrypoint
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY privoxy.config /etc/privoxy/config
+# Copy HAProxy config and entrypoint
+COPY haproxy.cfg /etc/haproxy/haproxy.cfg
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
