removing recheck haproxy

--- a/render_tailscale_installer/haproxy.cfg
+++ b/render_tailscale_installer/haproxy.cfg
@@ -23,7 +23,7 @@ backend tailscale_testbed
     mode http
     http-request set-path %[path,regsub(^/testbed/,/)]   # strip /testbed/ prefix
     # Route via tailscale socks proxy to private IP
-    server s1 100.88.156.14:80 check resolvers docker resolve-prefer ipv4 socks4 127.0.0.1:1055
+    server s1 100.89.168.7:8000 check # resolvers docker resolve-prefer ipv4 socks4 127.0.0.1:1055
 
 backend tailscale_default
     mode http
