--- a/render_tailscale_installer/nginx.conf
+++ b/render_tailscale_installer/nginx.conf
@@ -5,20 +5,13 @@ http {
         listen 80;
         server_name _;
 
-        # Example: expose local service 1
         location /testbed/ {
-            proxy_pass http://127.0.0.1:8118/;
-            proxy_set_header Host 100.88.156.14;
+            # Use Tailscale outbound HTTP proxy
+            proxy_pass http://127.0.0.1:1055/http/100.88.156.14:80;
+
+            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
-
-        # Example: expose another local service
-        # location /service2/ {
-        #     proxy_pass http://10.0.0.6:3000/;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # }
     }
 }
