--- a/render_tailscale_installer/nginx.conf
+++ b/render_tailscale_installer/nginx.conf
@@ -6,9 +6,7 @@ http {
         server_name _;
 
         location /testbed/ {
-            # Use Tailscale outbound HTTP proxy
-            proxy_pass http://127.0.0.1:1055/http/100.88.156.14:80;
-
+            proxy_pass http://100.88.156.14:80/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
