--- a/render_tailscale_installer/nginx.conf
+++ b/render_tailscale_installer/nginx.conf
@@ -2,7 +2,7 @@ events {}
 
 http {
     server {
-        listen 80;
+        listen {$PORT};
         server_name _;
 
         location /testbed/ {
