inject render port fix

--- a/render_tailscale_installer/Dockerfile.tailscale-render-deployment
+++ b/render_tailscale_installer/Dockerfile.tailscale-render-deployment
@@ -17,8 +17,8 @@ RUN curl -fsSL https://tailscale.com/install.sh | sh
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x entrypoint.sh
-
+# 
 # Render needs non-root sometimes, but we’ll keep nginx default
-EXPOSE 80
+# EXPOSE 80
 
 ENTRYPOINT ["/entrypoint.sh"]
