--- a/render_tailscale_installer/Dockerfile.tailscale-render-deployment
+++ b/render_tailscale_installer/Dockerfile.tailscale-render-deployment
@@ -2,11 +2,14 @@ FROM debian:bullseye-slim
 
 # Install dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl ca-certificates iproute2 iputils-ping bash \
+    curl ca-certificates iproute2 iputils-ping bash gnupg debian-keyring debian-archive-keyring \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Caddy
-RUN curl -fsSL https://getcaddy.com | bash -s personal
+# Install Caddy (from official repo)
+RUN curl -1sLf 'https://dl.cloudsmith.io/public/caddy/stable/gpg.key' | gpg --dearmor -o /usr/share/keyrings/caddy-stable-archive-keyring.gpg \
+    && curl -1sLf 'https://dl.cloudsmith.io/public/caddy/stable/debian.deb.txt' | tee /etc/apt/sources.list.d/caddy-stable.list \
+    && apt-get update && apt-get install -y caddy \
+    && rm -rf /var/lib/apt/lists/*
 
 # Install Tailscale
 RUN curl -fsSL https://tailscale.com/install.sh | sh
