--- a/render_tailscale_installer/Dockerfile.tailscale-render-deployment
+++ b/render_tailscale_installer/Dockerfile.tailscale-render-deployment
@@ -1,24 +1,16 @@
 FROM debian:bullseye-slim
 
-# Install dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl ca-certificates iproute2 iputils-ping bash gnupg debian-keyring debian-archive-keyring \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install Caddy (from official repo)
-RUN curl -1sLf 'https://dl.cloudsmith.io/public/caddy/stable/gpg.key' | gpg --dearmor -o /usr/share/keyrings/caddy-stable-archive-keyring.gpg \
-    && curl -1sLf 'https://dl.cloudsmith.io/public/caddy/stable/debian.deb.txt' | tee /etc/apt/sources.list.d/caddy-stable.list \
-    && apt-get update && apt-get install -y caddy \
-    && rm -rf /var/lib/apt/lists/*
+    curl ca-certificates haproxy netcat-openbsd iproute2 iputils-ping bash \
+  && rm -rf /var/lib/apt/lists/*
 
 # Install Tailscale
 RUN curl -fsSL https://tailscale.com/install.sh | sh
 
-# Copy configs
-COPY Caddyfile /etc/caddy/Caddyfile
+COPY haproxy.cfg /etc/haproxy/haproxy.cfg
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
-EXPOSE 8080
+ENV PORT=8080
 
-ENTRYPOINT ["/entrypoint.sh"]
+CMD ["/entrypoint.sh"]
