saleor dashbaord setup :

--- a/render_tailscale_installer/haproxy.cfg
+++ b/render_tailscale_installer/haproxy.cfg
@@ -14,19 +14,19 @@ frontend http_in
     bind *:${PORT}
     mode http
 
-    acl is_testbed path_beg /testbed/
+    acl is_testbed path_beg /graphql/
     use_backend forward_testbed if is_testbed
 
-    default_backend default_503
+    default_backend http://100.88.156.14:9000
 
-backend forward_testbed
+backend forward_graphql
     mode http
     # local tailscale outbound http proxy:
     server ts_proxy 127.0.0.1:1055
 
     # Transform request-line to absolute-form the proxy expects.
     # Replace DEST with the destination host:port you want to expose.
-    http-request set-path http://100.88.156.14:80
+    http-request set-path http://100.88.156.14:8000
     # Ensure Host header is the destination host (not the original).
     http-request set-header Host 100.88.156.14
 
@@ -34,6 +34,22 @@ backend forward_testbed
     http-request del-header Proxy
     # allow server to reuse connection
     option http-server-close
+
+# backend forward_dashboard
+#     mode http
+#     # local tailscale outbound http proxy:
+#     server ts_proxy 127.0.0.1:1055
+
+#     # Transform request-line to absolute-form the proxy expects.
+#     # Replace DEST with the destination host:port you want to expose.
+#     http-request set-path http://100.88.156.14:80
+#     # Ensure Host header is the destination host (not the original).
+#     http-request set-header Host 100.88.156.14
+
+#     # optionally, remove hop-by-hop headers
+#     http-request del-header Proxy
+#     # allow server to reuse connection
+#     option http-server-close
 
 backend default_503
     mode http
