adding some haproxy fix

--- a/render_tailscale_installer/haproxy.cfg
+++ b/render_tailscale_installer/haproxy.cfg
@@ -17,7 +17,7 @@ frontend http_in
     acl is_testbed path_beg /graphql/
     use_backend forward_testbed if is_testbed
 
-    default_backend http://100.88.156.14:9000
+    default_backend forward_dashboard
 
 backend forward_graphql
     mode http
@@ -35,21 +35,21 @@ backend forward_graphql
     # allow server to reuse connection
     option http-server-close
 
-# backend forward_dashboard
-#     mode http
-#     # local tailscale outbound http proxy:
-#     server ts_proxy 127.0.0.1:1055
+backend forward_dashboard
+    mode http
+    # local tailscale outbound http proxy:
+    server ts_proxy 127.0.0.1:1055
 
-#     # Transform request-line to absolute-form the proxy expects.
-#     # Replace DEST with the destination host:port you want to expose.
-#     http-request set-path http://100.88.156.14:80
-#     # Ensure Host header is the destination host (not the original).
-#     http-request set-header Host 100.88.156.14
+    # Transform request-line to absolute-form the proxy expects.
+    # Replace DEST with the destination host:port you want to expose.
+    http-request set-path http://100.88.156.14:9000
+    # Ensure Host header is the destination host (not the original).
+    http-request set-header Host 100.88.156.14
 
-#     # optionally, remove hop-by-hop headers
-#     http-request del-header Proxy
-#     # allow server to reuse connection
-#     option http-server-close
+    # optionally, remove hop-by-hop headers
+    http-request del-header Proxy
+    # allow server to reuse connection
+    option http-server-close
 
 backend default_503
     mode http
