fix: correct backend reference for testbed in HAProxy configuration

--- a/render_tailscale_installer/haproxy.cfg
+++ b/render_tailscale_installer/haproxy.cfg
@@ -15,7 +15,7 @@ frontend http_in
     mode http
 
     acl is_testbed path_beg /graphql/
-    use_backend forward_testbed if is_testbed
+    use_backend forward_graphql if is_testbed
 
     default_backend forward_dashboard
 
