fix: update ACL path for testbed in HAProxy configuration

--- a/render_tailscale_installer/haproxy.cfg
+++ b/render_tailscale_installer/haproxy.cfg
@@ -14,7 +14,7 @@ frontend http_in
     bind *:${PORT}
     mode http
 
-    acl is_testbed path_beg /graphql/
+    acl is_testbed path_beg /graphql_playground/
     use_backend forward_graphql if is_testbed
 
     default_backend forward_dashboard
