fix: enhance HAProxy configuration with additional backends and ACLs

--- a/render_tailscale_installer/haproxy.cfg
+++ b/render_tailscale_installer/haproxy.cfg
@@ -5,6 +5,7 @@ global
 
 defaults
     log     global
+    mode    http
     option  httplog
     timeout connect 5s
     timeout client  60s
@@ -14,10 +15,19 @@ frontend http_in
     bind *:${PORT}
     mode http
 
+     # ACLs by Host header (case-insensitive)
+     # use to configure host based ip retrieval
+    acl host_dashboard hdr(host) -i saleor-dashboard.ddnsgeek.com
+    acl host_backend   hdr(host) -i saleor-backend.freeddns.org
+
+
     acl is_testbed path_beg /graphql_playground/
     use_backend forward_graphql if is_testbed
 
     default_backend forward_dashboard
+
+    # reject any other host
+    # http-request deny if !host_dashboard !host_backend
 
 backend forward_graphql
     mode http
@@ -50,6 +60,33 @@ backend forward_dashboard
     http-request del-header Proxy
     # allow server to reuse connection
     option http-server-close
+
+backend ts_dashboard
+    mode http
+    # local tailscale outbound HTTP proxy
+    server ts_proxy 127.0.0.1:1055
+
+    # Rewrite the request to absolute-form expected by an HTTP forward proxy.
+    # Keep the original path (including query string).
+    http-request set-path http://100.88.156.14:9000%[path]
+    # Set Host header to the destination (include port if non-standard).
+    http-request set-header Host 100.88.156.14:9000
+
+    # Clean up hop-by-hop headers that proxies shouldn't forward.
+    http-request del-header Proxy
+    option http-server-close
+
+backend ts_backend
+    mode http
+    server ts_proxy 127.0.0.1:1055
+
+    http-request set-path http://100.88.156.14:8000%[path]
+    http-request set-header Host 100.88.156.14:8000
+
+    http-request del-header Proxy
+    option http-server-close
+
+
 
 backend default_503
     mode http
