change structure and overhall the volume

--- a/games/dockerimage/Dockerfile.bombsquad-server
+++ b/games/dockerimage/Dockerfile.bombsquad-server
@@ -7,9 +7,9 @@ FROM python:3.13-slim-trixie
 
 ARG TARGETARCH="x86_64"
 ARG BOMBSQUAD_VERSION="1.7.43"
-ENV TARGETARCH=${TARGETARCH}
+# ENV TARGETARCH=${TARGETARCH}
 
-ARG BOMBSQUAD_VERSION="${BOMBSQUAD_VERSION}"
+# ARG BOMBSQUAD_VERSION="${BOMBSQUAD_VERSION}"
 
 # Install required packages and clean up
 RUN apt update && \
