--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 version: "3.9"
-
+ # full compose file, deprecated
 services:
   simple-proxy:
     build:
@@ -49,3 +49,23 @@ services:
     ports:
       - 43210:43210/udp
     restart: unless-stopped
+  stirling-pdf:
+    image: docker.stirlingpdf.com/stirlingtools/stirling-pdf:latest
+    ports:
+      - '8080:5500'
+    volumes:
+      - ./StirlingPDF/trainingData:/usr/share/tessdata # Required for extra OCR languages
+      - ./StirlingPDF/extraConfigs:/configs
+      - ./StirlingPDF/customFiles:/customFiles/
+      - ./StirlingPDF/logs:/logs/
+      - ./StirlingPDF/pipeline:/pipeline/
+    environment:
+      - DISABLE_ADDITIONAL_FEATURES=false
+      - LANGS=en_GB
+  jupyter-notebook:
+    build:
+      dockerfile: ${PWD}/Dockerfile.jupyter
+    ports:
+      - '8888:8888'
+    volumes:
+      - ./volumes/jupyter:/app
