--- a/utility/docker-compose-jupyter.yml
+++ b/utility/docker-compose-jupyter.yml
@@ -4,7 +4,7 @@ services:
 
   jupyter-notebook:
     build:
-      dockerfile: ./dockerimage/Dockerfile.jupyter
+      dockerfile: ./dockerimage/Dockerfile.jupyter-notebook
     ports:
       - '8888:1223'
     volumes:
