--- a/utility/dockerimage/Dockerfile.jupyter-notebook
+++ b/utility/dockerimage/Dockerfile.jupyter-notebook
@@ -8,8 +8,14 @@ RUN pip install --upgrade pip setuptools wheel
 
 RUN pip install jupyterlab jupyter-collaboration
 
-EXPOSE 8888
-
 VOLUME ["/app"]
 
-CMD ["jupyter", "lab", "--allow-root", "--no-browser","--collaborative"]
+CMD ["jupyter","lab",
+    "--allow-root",
+    "--no-browser",
+    "--collaborative",
+    "--ip=0.0.0.0",
+    "--port=1223",
+    "--NotebookApp.token=''",
+    "--NotebookApp.password=''"
+    ]
