--- a/anime/docker-compose-seanime.yml
+++ b/anime/docker-compose-seanime.yml
@@ -10,4 +10,4 @@ services:
       - ./volumes/seanime-config:/root/.config/Seanime
     ports:
       - 3211:43211
-    restart: always
+    restart: unless-stopped
