docker context fix

--- a/n8n-utils/docker-compose-n8n.yml
+++ b/n8n-utils/docker-compose-n8n.yml
@@ -29,7 +29,7 @@ services:
 
   fastapi-proxy:
     build:
-      context: ./fastapi-proxy
+      context: ./
       dockerfile: ./dockerimage/Dockerfile.fastapi_helper
     container_name: fastapi-proxy
     restart: unless-stopped
