--- a/n8n-utils/docker-compose-n8n.yml
+++ b/n8n-utils/docker-compose-n8n.yml
@@ -35,6 +35,8 @@ services:
     restart: unless-stopped
     expose:
       - "8000"  # internal only
+    dns:
+      - 8.8.8.8
     networks:
       - n8n_net
 
